# atlaslab-dashboard

./: .gitignore  CHANGELOG.md  README.md  package.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: allow-arr-stack.json  allow-check-ports.json  allow-crontab-list.json  allow-crontab-save.json  allow-docker-action.json  allow-docker-exec.json  allow-docker-list.json  allow-docker-logs.json  allow-docker-stats.json  allow-file-delete.json  allow-file-list.json  allow-file-mkdir.json  allow-file-read.json  allow-file-rename.json  allow-file-write.json  allow-firewall-action.json  allow-firewall-status.json  allow-get-connection.json  allow-get-uptime.json  allow-jellyfin-control.json  allow-network-info.json  allow-nextcloud-occ.json  allow-ollama-models.json  allow-package-action.json  allow-package-updates.json  allow-process-kill.json  allow-process-list.json  allow-profile-add.json  allow-profile-get-active.json  allow-profile-list.json  allow-profile-remove.json  allow-profile-switch.json  allow-pty-close.json  allow-pty-resize.json  allow-pty-spawn.json  allow-pty-write.json  allow-run-command.json  allow-service-action.json  allow-service-list.json  allow-set-connection.json  (+10 more)
src-tauri/src/: lib.rs  main.rs
web-dashboard/: REPO-METADATA.md
web-dashboard/backend/: app.py
web-dashboard/frontend/static/js/: main.js
