[package]
name = "bootstreep-dashboard"
version = "2.6.1"
edition = "2021"

[lib]
name = "bootstreep_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
dirs = "5"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"

